most major changes complete - need to review for quality.

--- a/indexgridversion.html
+++ b/indexgridversion.html
@@ -39,7 +39,7 @@
               <img class="project-logo" src="images/verve-logo.png">
             </div>
             <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
-            <button onclick="window.location.href = 'project.html';">READ MORE</button>
+            <button onclick="window.location.href = 'projectgridversion.html';">READ MORE</button>
           </div>
         </section>
 
