--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -431,14 +431,15 @@
               <p>In a second round of preference tests and a subsequent design critique, Option 2 performed the best. While close to being a solid solution,  because of its simplicity, implementation of the V monogram and allusion to the statistical data of the Verve insights and data features, it did require some minor adjustments. </p>
               <img class = "final-logo" src = "images/Branding/Logo Final/Group 2.2.png"</img>
             </div>
-            <div class = "typography">
-              <h3>Typography</h3>
-              <p>I chose Geosans Light  as  the brand typefaces because it delicately compliments  the bold shapes of the Verve logo mark while remaining minimal and modern.</p>
-              <p>I chose  Montserrat as a  complimentary typeface for use throughout the app for its readability. As with the brand typefaces I wanted to use a font that would be minimal and modern.</P>
-            </div>
+
         </section>
 
         <section class = "branding-fullwidth2">
+          <div class = "typography">
+            <h3>Typography</h3>
+            <p>I chose Geosans Light  as  the brand typefaces because it delicately compliments  the bold shapes of the Verve logo mark while remaining minimal and modern.</p>
+            <p>I chose  Montserrat as a  complimentary typeface for use throughout the app for its readability. As with the brand typefaces I wanted to use a font that would be minimal and modern.</P>
+          </div>
           <img class = "type-study" src = "images/Branding/typography.png"</img>
           </section>
 
@@ -449,13 +450,13 @@
             <p>A blue tone palette was preferred by 63% of respondents. This confirmed my early inclinations about colors that would be suitable. I also found that blue was heavily used by competitors and color theory research revealed that this is a reliable and trusted choice, so not an unpopular one.</p>
             <p>Wanting to add more dynamism and depth to my color palette, I tested user response to combining gradients. This was preferred 67% of the time.</p>
             <p>Based on client feedback, I made slight adjustments to the palette and decided to use a gradient shade of blue as the primary color, in combination with a gradient shade of pink, in combination with gray, white, black and yellow.</p>
-          
-            <img class = "final-colors" src= "images/Branding/Colors/color1.png"</img>
-            <img class = "final-colors"  src= "images/Branding/Colors/color2.png"</img>
-            <img class = "final-colors"  src= "images/Branding/Colors/color3.png"</img>
-            <img class = "final-colors"  src= "images/Branding/Colors/color4.png"</img>
-            <img class = "final-colors"  src= "images/Branding/Colors/color5.png"</img>
-            <img class = "final-colors"  src= "images/Branding/Colors/color6.png"</img>
+
+            <img class = "final-colors" src="images/Branding/Colors/color1.png"</img>
+            <img class = "final-colors" src="images/Branding/Colors/color2.png"</img>
+            <img class = "final-colors" src="images/Branding/Colors/color3.png"</img>
+            <img class = "final-colors" src="images/Branding/Colors/color4.png"</img>
+            <img class = "final-colors" src="images/Branding/Colors/color5.png"</img>
+            <img class = "final-colors" src="images/Branding/Colors/color6.png"</img>
 
             <p>I proceeded to prepare a full style guide that included the color palette along side additional branding guidelines such as typography, logo usage, and iconography. </p>
             <button>View the Style Guide</button>
@@ -473,10 +474,14 @@
           <div class = "preference-tests">
             <h3>Preference Testing</h3>
             <p>There were still a few design decisions that I was uncertain about. Rather than choosing them based on my own preferences, it was important to get feedback from potential users. I preference tested various components such as button style, insights dashboard layout and landing page copywriting.</p>
-            <img class = "button-test" src= "images/Preference Testing/button-styles.png"</img>
-            <img class = "dashboard-test"  src= "images/Preference Testing/insights-dashboards.png"</img>
-            <img class = "homepage-test"  src= "images/Preference Testing/homepage1.png"</img>
-            <img class = "homepage-test"  src= "images/Preference Testing/homepage1.png"</img>
+            <div class = "test-images1">
+              <img class = "button-test" src= "images/Preference Testing/button-styles.png"</img>
+              <img class = "dashboard-test"  src= "images/Preference Testing/insights-dashboards.png"</img>
+            </div>
+            <div class = "test-images2">
+              <img class = "homepage-test1"  src= "images/Preference Testing/homepage1.png"</img>
+              <img class = "homepage-test2"  src= "images/Preference Testing/homepage1.png"</img>
+            </div>
             <p>I discovered that a solid blue button style, a one-screen dashboard view and direct, unquestioning text were overwhelmingly preferred. These revelations guided me as made a few changes before retesting my prototype.</p>
           </div>
           <div class = "user-testing-hifi">
@@ -513,23 +518,14 @@
           </div>
         </section>
 
-        <nav class ="bottom-nav">
-          <Table class = "bottom">
-            <tr>
-              <td class = "top">
-                <img src ="images/icons/top.png"</img>
-              </td>
-              <td>
-                <h4 class = "top-text" >top</h4>
-              </td>
-              <td>
-                <h4 class = "next-text">next project</h4>
-              </td>
-              <td>
-                <img class = "next" src ="images/icons/right-arrow.png"</img>
-              </td>
-          </table>
-        </nav>
+        <div class ="bottom-nav">
+
+          <img src ="images/icons/top.png"</img>
+          <h4 class = "top-text" >top</h4>
+          <h4 class = "next-text">next</h4>
+          <img class = "next" src ="images/icons/right-arrow.png"</img>
+
+        </div>
 
         <footer class="verve-footer">
           <h1 class="verve-footer-header">Let's Work Together!</h1>
