removing original HTML and CSS files, leaving those that are responsive.

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <body class = "about-page">
 
       <header class="navigation">
-        <a class = "logo" href="indexgridversion.html">
+        <a class = "logo" href="index.html">
           <img class="navigation-logo" src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
           </a>
         <a class="navigation-work" href="projectgridversion.html">Work</a>
