--- a/index.html
+++ b/index.html
@@ -7,47 +7,57 @@
     <!-- Reset -->
     <link rel= stylesheet href="styles/reset.css">
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/maingridversion.css">
   </head>
 
-  <body>
+  <body class = "homepage">
 
       <header class="navigation">
-        <a href="index.html">
+        <a class = "logo" href="index.html">
           <img class="navigation-logo" src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
-        </a>
-        <div class = "nav-links">
-          <a class="navigation-work" href="project.html">Work</a>
-          <a class="navigation-about" href="">About</a>
-          <a class="navigation-resume" href="">Resume</a>
-        </div>
+          </a>
+        <a class="navigation-work" href="projectgridversion.html">Work</a>
+        <a class="navigation-about" href="about.html">About</a>
+        <a class="navigation-resume" href="">Resume</a>
       </header>
 
       <section class="hero">
-          <h1>Hi! I’m Jess,<h1>
+          <h1>Hi! I'm Jess,</h1>
           <h2>a UX designer and brand strategist from NYC. I specialize in creating <strong class = "hero-emphasis"> unique</strong> and <strong class = "hero-emphasis">personal</strong> digital experiences.</h2>
         </section>
 
+      <div class = "recent-work-header">
+        <h1>Recent Work</h1>
+      </div>
+
       <section class="recent-work">
-          <h1>Recent Work</h1>
-          <div>
-            <img class="project-image" src="images/verve-thumbnail.png" width="323" height="323">
+          <div class = "project-image">
+            <img class="verve-image" src="images/verve-thumbnail.png" width="323" height="323">
           </div>
-          <div >
-            <img class="project-logo" src="images/verve-logo.png">
+          <div class = "project-details">
+            <div>
+              <img class="project-logo" src="images/verve-logo.png">
+            </div>
+            <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
+            <button onclick="window.location.href = 'projectgridversion.html';">READ MORE</button>
           </div>
-          <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
-          <button onclick="window.location.href = 'project.html';">READ MORE</button>
         </section>
 
-      <section class="about-me">
+      <div class = "about-me-header">
         <h1>About Me</h1>
-        <div>
+      </div>
+
+      <section class="about-me">
+        <!-- <h1>About Me</h1> -->
+        <div class = "about-me-image">
+          <div class = "homepage-portrait">
           <img class=personal-image src="images/jb-headshot2.svg">
         </div>
-        <p>Hi, I’m Jessica Blanchard, designer and brand strategist. I’m also an urban homesteader, hedge lover, Persian cat (and boy) mom, true crime enthusiast, contemporary art collector and prison reform crusader. I’m passionate about giving back and designing solutions that make community service inherent to every day life. I enjoy designing nuanced solutions that make the internet more enjoyable.</p>
-        <button>LEARN MORE</button>
+          </div>
+        <div class = "about-me-details">
+          <p>Hi, I’m Jessica Blanchard, user experience designer and brand strategist. I’m also an urban homesteader, Persian cat and boy mom, true crime sleuth, contemporary art collector and prison reform advocate. I’m passionate about designing solutions for real people, driven by real research and data. I work to make the internet a healthier place, while still <strike>driving</strike> crushing business goals.</p>
+          <button>LEARN MORE</button>
+        </div>
       </section>
 
       <footer class="footer">
@@ -71,5 +81,6 @@
         </div>
         <p class="footer-text">designed and developed by Jessica Blanchard</p>
       </footer>
+
   </body>
 </html>
