--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -13,11 +13,11 @@
   <body class = "verve-case-study">
 
         <nav class="navigation">
-          <a class="logo" href="indexgridversion.html">
+          <a class="logo" href="index.html">
               <img class = "navigation-logo" src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
             </a>
-          <a class="navigation-work" href="project.html">Work</a>
-          <a class="navigation-about" href="">About</a>
+          <a class="navigation-work" href="projectgridversion.html">Work</a>
+          <a class="navigation-about" href="about.html">About</a>
           <a class="navigation-resume" href="">Resume</a>
         </nav>
 
