Correcting undersized images

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -221,7 +221,7 @@
                     <td>Limited options may encourage users to turn to <strong class = "chart-emphasis">more robust, less niche specific alternatives.</strong>  </td>
                   </tr>
                   <td class = "swot-logo4" colspan="4">
-                      <img src="images/Competitor Logos/Floka.png">
+                      <img src="images/Competitor Logos/floka.png">
                     </td>
                   <tr class ="swot4">
                     <td>S</td>
@@ -449,8 +449,12 @@
             <p>I chose Geosans Light  as  the brand typefaces because it delicately compliments  the bold shapes of the Verve logo mark while remaining minimal and modern.</p>
             <p>I chose  Montserrat as a  complimentary typeface for use throughout the app for its readability. As with the brand typefaces I wanted to use a font that would be minimal and modern.</P>
           </div>
-          <img class = "type-study" src = "images/Branding/typography.png"</img>
           </section>
+
+        <div class= "type-chart">
+          <img class = "type-study" src = "images/Branding/typography1.png"</img>
+          <img class = "type-study" src = "images/Branding/typography2.png"</img>
+        </div>
 
         <section class = "branding-indented3">
           <div class = "color-palette">
