Imrpoved spacing between elements.

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -36,9 +36,7 @@
               <img class="verve-image" src="images/verve-thumbnail.png" width="323" height="323">
             </div>
             <div class = "project-details">
-              <div>
-                <img class="project-logo" src="images/verve-logo.png">
-              </div>
+              <img class="project-logo" src="images/verve-logo.png">
               <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
               <button onclick="window.location.href = '';">View the Prototype</button>
             </div>
@@ -475,7 +473,7 @@
             <button>View the Style Guide</button>
           </div>
           <div class = "hifi-mockups">
-            <h3>High Fidelity Mockups<h3>
+            <h3>High Fidelity Mockups</h3>
             <p>As I created hi-fi mockups, I  discovered design elements that previously seemed to recede into the background of the app, but in actuality needed to be considered as part of a design pattern. Design features like process tracking dots and text captioning on menu icons, needed to be considered as I was developing  high fidelity mockups.</p>
             <img class = "hifi-pic" src= "images/HiFi Mockups/activity-mockup.png"</img>
             <img class = "hifi-pic" src= "images/HiFi Mockups/existing-user-dashboard-mockup.png"</img>
