additional spacing edits.

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -531,7 +531,7 @@
 
         <div class ="bottom-nav">
 
-          <img src ="images/icons/top.png"</img>
+          <img class = "top" src ="images/icons/top.png"</img>
           <h4 class = "top-text" >top</h4>
           <h4 class = "next-text">next</h4>
           <img class = "next" src ="images/icons/right-arrow.png"</img>
