--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- <h1>About Me</h1> -->
         <div class = "about-me-image">
           <div class = "homepage-portrait">
-          <img class=personal-image src="images/jb-headshot2.svg">
+          <img class=personal-image src="images/jb-headshot5.jpg">
         </div>
           </div>
         <div class = "about-me-details">
