--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -420,7 +420,7 @@
             <div class = "brainstorming">
               <h3>Naming: Brainstorming and mindmapping</h3>
               <p>I engaged in brainstorming and mindmapping exercised to narrow down naming ideas and settled on Verve because it was a short moniker that embodied the clean energy and vitality the app needed to project.</p>
-              <p>The branding should reflect the app’s positioning at the intersection of self care and data while maintaining a clean and sleek interface. </p>
+              <p class = "branding-p2">The branding should reflect the app’s positioning at the intersection of self care and data while maintaining a clean and sleek interface. </p>
               <img class = "branding-idea" src = "images/Branding/vibrant-color.png"</img>
               <img class = "branding-idea"  src = "images/Branding/gender-inclusive.png"</img>
               <img class = "branding-idea"  src = "images/Branding/simple-wordmark.png"</img>
@@ -450,8 +450,8 @@
           </section>
 
         <div class= "type-chart">
-          <img class = "type-study" src = "images/Branding/typography1.png"</img>
-          <img class = "type-study" src = "images/Branding/typography2.png"</img>
+          <img class = "type-study-1" src = "images/Branding/typography1.png"</img>
+          <img class = "type-study-2" src = "images/Branding/typography2.png"</img>
         </div>
 
         <section class = "branding-indented3">
