--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         <!-- <h1>About Me</h1> -->
         <div class = "about-page-image">
           <div class = "about-page-portrait">
-          <img class=about-page-pic src="images/jb-headshot4.jpg">
+          <img class="about-page-pic" src="images/jb-headshot4.jpg">
         </div>
           </div>
         <div class = "about-page-details">
