Added HTTPS://, Updated Bio, fixed HTML errors and aligned images

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
       <header class="navigation">
         <a class = "logo" href="index.html">
-          <img class="navigation-logo" src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
+          <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo"width="62" border="0" alt="" style="padding:0px;">
           </a>
         <a class="navigation-work" href="projectgridversion.html">Work</a>
         <a class="navigation-about" href="about.html">About</a>
@@ -36,37 +36,37 @@
 
       <section class="about-page-bio">
         <!-- <h1>About Me</h1> -->
-        <div class = "about-page-image">
-          <div class = "about-page-portrait">
-          <img class= "about-page-pic" src="images/jb-headshot4.jpg">
-        </div>
-          </div>
+
+        <img class= "about-page-pic" src="images/jb-headshot4.jpg">
+
         <div class = "about-page-details">
-          <p>Growing up on Long Island in the 90s, we relished the deliciousness of a fresh pizza. You remember the kind - cheesy, oily,  the kind that came with the little white pizza table to protect its gooey goodness. When the town was slow to repair a downed street sign at our corner, our pizza deliveries stopped showing up. After doing a bit of digging, we discovered that the street sign was the core of our problem. So my mother and I went out out, shovels in tow, to repair it. She taught me that our street sign, our community and our pizza were our responsibility and we would wait for someone else to fix it or we could step up and do so ourselves. This sowed the seed for my interest in problem solving. I grew passionate about looking at any challenge I encountered and exploring how similar issues impacted others and how we could better solve them.
+          <p>Growing up on Long Island in the 90s, we relished the deliciousness of a fresh pizza. You remember the kind - cheesy, oily, the kind that came with the little white pizza table to protect its gooey goodness. When the town was slow to repair a downed street sign at our corner, our pizza deliveries stopped showing up.</p>
+          <p>After doing a bit of digging, we discovered that the street sign was the core of our problem. So my mother and I went out out, shovels in tow, to repair it. She taught me that our street sign, our community and our pizza were our responsibility and we would wait for someone else to fix it or we could step up and do so ourselves. </p>
+          <p>This sowed the seed for my interest in problem solving. I grew passionate about looking at any challenge I encountered and exploring how similar issues impacted others and how we could better solve them.</p>
+          <h2>Fast Forward</h2>
+          <p>After studying social psychology and criminology, I spent 10 years helping businesses be more productive through efficient operations and project management. Whenever I had an opportunity to strategize and design a product, I found my problem solving skills firing on all cylinders and I was deeply drawn to the creative aspects of conceptualizing new solutions, while still passionate about the research and analysis side as well.</p>
+          <h2>Users First</h2>
+          <p>My background in psychology taught me that driving a digital outcome couldnt occur with blinders on. I witnesses many businesses pursuing outcomes from their clients, employees and stakeholder without prioritizing their experience prior to a desired outcome. The principals of user centered experience design aligned completely with my instincts about driving successful business solutions.</p>
+          <h2>A Designer at Heart</h2>
+          <p>So I decided to build upon my existing skills and pursue UX design full time  by participating in a design program. Today I  design solutions that ensure that user interest and productivity work in synergy.</p>
 
-          <p>As an undergraduate student, I studied gender, criminology and psychology to explore solving the problem of the growing female prison population. After undergrad, I began work with a developer revitalizing a community plagued by many of the issues I’d learned were contributing factors.  However, as my career exposed me to more aspects of running a business, I found myself deeply drawn to the creative aspects of problem solving: marketing, design and conceptualizing new solutions, while still passionate about the research of problem solving. But without a formal creative background, I stayed the course, using my research and analysis skills to solve problems.</p>
-
-          <p>I followed my creative passions, building a contemporary art collection and  undertaking new projects in my spare time, such as founding a bakery, specializing in health conscious custom designed pastries, launching an art consultancy and gallery, shooting editorial photography and designing and marketing self care tools. No matter the project, I always found my rhythm in the process of identifying and exploring a problem, understanding what was needed to solve it and iterating on a solution until it was just right.</p>
-
-          <p>When I became a parent in 2016, I began to think more critically about how I was using my time to make a positive impact and the legacy that I was forming for my family. I was faced with a divergence between the two facets of myself. I was deeply entrenched in analytical problem solving by day and the relishing full spectrum, creative problem solving, by night.  I soon realized that rather than looking for ways to use both sets of skills independently, I should have been harnessing the power of a synergy between the two. Product design embodied this synergy and  realizing this as my true calling has been an awakening, amplified my ability to make an impact and allowed me to carry on a legacy of problem solving.
-          </p>
         </div>
       </section>
 
       <footer class="footer">
         <h1 class="footer-header">Let's Work Together!</h1>
         <div class="footer-links">
-            <a href="{linkedin.com/in/jessdesignedit}">
-              <img src=images/icons/icons8-linkedin-2-500.png>
+            <a href="https://www.linkedin.com/in/jessdesignedit">
+              <img src=images/icons/icons8-linkedin-2-500.png alt="LinkedIn logo">
               </a>
-            <a href="{github.com/jessblanchard}">
-              <img src="images/icons/icons8-github-500.png">
+            <a href="https://www.github.com/jessblanchard">
+              <img src="images/icons/icons8-github-500.png" alt="Github logo">
               </a>
-            <a href="{instagram.com/jessytribble}">
-              <img src=images/icons/icons8-instagram-camera-500.png>
+            <a href="https://www.instagram.com/jessytribble">
+              <img src=images/icons/icons8-instagram-camera-500.png alt="Instagram logo">
               </a>
-            <a href="{twitter.com/jesstribble}">
-              <img src= images/icons/icons8-twitter-500.png>
+            <a href="https://www.twitter.com/jesstribble">
+              <img src= images/icons/icons8-twitter-500.png alt="Twitter logo">
               </a>
             <a href="mailto:{jessicahtribble@gmail.com}">
               <img src=images/icons/icons8-email-envelope-500.png>
