--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <header class="navigation">
         <a class = "logo" href="index.html">
-          <img class="navigation-logo" src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
+          <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62"  border="0" alt="" style="padding:0px;">
           </a>
         <a class="navigation-work" href="projectgridversion.html">Work</a>
         <a class="navigation-about" href="about.html">About</a>
@@ -60,7 +60,7 @@
         <!-- <h1>About Me</h1> -->
         <div class = "about-me-image">
           <div class = "homepage-portrait">
-          <img class=personal-image src="images/jb-headshot5.jpg">
+          <img class=personal-image src="images/jb-headshot5.jpg" alt="Jessica Portrait">
         </div>
           </div>
         <div class = "about-me-details">
@@ -72,20 +72,20 @@
       <footer class="footer">
         <h1 class="footer-header">Let's Work Together!</h1>
         <div class="footer-links">
-            <a href="{linkedin.com/in/jessdesignedit}">
-              <img src=images/icons/icons8-linkedin-2-500.png>
+            <a href="https://www.linkedin.com/in/jessdesignedit">
+              <img src="images/icons/icons8-linkedin-2-500.png" alt="LinkedIn logo">
               </a>
-            <a href="{github.com/jessblanchard}">
-              <img src="images/icons/icons8-github-500.png">
+            <a href="https://www.github.com/jessblanchard">
+              <img src="images/icons/icons8-github-500.png" alt="GitHub logo">
               </a>
-            <a href="{instagram.com/jessytribble}">
-              <img src=images/icons/icons8-instagram-camera-500.png>
+            <a href="https://www.instagram.com/jessytribble">
+              <img src="images/icons/icons8-instagram-camera-500.png" alt="Instagram logo">
               </a>
-            <a href="{twitter.com/jesstribble}">
-              <img src= images/icons/icons8-twitter-500.png>
+            <a href="https://www.twitter.com/jesstribble">
+              <img src= "images/icons/icons8-twitter-500.png" alt="Twitter logo">
               </a>
             <a href="mailto:{jessicahtribble@gmail.com}">
-              <img src=images/icons/icons8-email-envelope-500.png>
+              <img src="images/icons/icons8-email-envelope-500.png" alt="Mail Icon">
               </a>
         </div>
         <p class="footer-text">designed and developed by Jessica Blanchard</p>
