--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -23,7 +23,7 @@
 
         <nav class="navigation">
           <a class="logo" href="index.html">
-              <img class = "navigation-logo" src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
+              <img class = "navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo"width="62" border="0" alt="" style="padding:0px;">
             </a>
           <a class="navigation-work" href="projectgridversion.html">Work</a>
           <a class="navigation-about" href="about.html">About</a>
@@ -421,11 +421,13 @@
               <h3>Naming: Brainstorming and mindmapping</h3>
               <p>I engaged in brainstorming and mindmapping exercised to narrow down naming ideas and settled on Verve because it was a short moniker that embodied the clean energy and vitality the app needed to project.</p>
               <p class = "branding-p2">The branding should reflect the app’s positioning at the intersection of self care and data while maintaining a clean and sleek interface. </p>
-              <img class = "branding-idea" src = "images/Branding/vibrant-color.png"</img>
-              <img class = "branding-idea"  src = "images/Branding/gender-inclusive.png"</img>
-              <img class = "branding-idea"  src = "images/Branding/simple-wordmark.png"</img>
-              <img class = "branding-idea"  src = "images/Branding/minimal-modern.png"</img>
-              <img class = "moodboard" src = "images/Branding/moodboard.jpg"</img>
+              <div class = "branding-theme">
+                <img class = "branding-idea" src = "images/Branding/vibrant-color.png"</img>
+                <img class = "branding-idea"  src = "images/Branding/gender-inclusive.png"</img>
+                <img class = "branding-idea"  src = "images/Branding/simple-wordmark.png"</img>
+                <img class = "branding-idea"  src = "images/Branding/minimal-modern.png"</img>
+                <img class = "moodboard" src = "images/Branding/moodboard.jpg"</img>
+              </div>
             </div>
             <div class = "logo-design">
               <h3>Logo Design</h3>
@@ -542,16 +544,16 @@
           <h1 class="verve-footer-header">Let's Work Together!</h1>
           <div class="verve-footer-links">
               <a href="https://www.linkedin.com/in/jessdesignedit">
-                <img src=images/icons/icons8-linkedin-2-500.png>
+                <img src=images/icons/icons8-linkedin-2-500.png alt="LinkedIn logo">
                 </a>
               <a href="https://www.github.com/jessblanchard">
-                <img src="images/icons/icons8-github-500.png">
+                <img src="images/icons/icons8-github-500.png" alt="Github logo">
                 </a>
               <a href="https://www.instagram.com/jessytribble">
-                <img src=images/icons/icons8-instagram-camera-500.png>
+                <img src=images/icons/icons8-instagram-camera-500.png alt="Instagram logo">
                 </a>
               <a href="https://www.twitter.com/jesstribble">
-                <img src= images/icons/icons8-twitter-500.png>
+                <img src= images/icons/icons8-twitter-500.png alt="Twitter logo">
                 </a>
               <a href="mailto:jessicahtribble@gmail.com">
                 <img src=images/icons/icons8-email-envelope-500.png>
