Added resume link

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -27,7 +27,7 @@
             </a>
           <a class="navigation-work" href="projectgridversion.html">Work</a>
           <a class="navigation-about" href="about.html">About</a>
-          <a class="navigation-resume" href="">Resume</a>
+          <a class="navigation-resume" href="https://www.dropbox.com/s/nduu1zh674zt4l3/Jessica%20Blanchard%20Resume%202019%20V2.4.pdf?dl=0">Resume</a>
         </nav>
 
 
