update to appropriately center select content on a smaller screen

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <header class="navigation">
         <a class = "logo" href="index.html">
-          <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62"  border="0" alt="" style="padding:0px;">
+          <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;">
           </a>
         <a class="navigation-work" href="projectgridversion.html">Work</a>
         <a class="navigation-about" href="about.html">About</a>
@@ -41,11 +41,11 @@
 
       <section class="recent-work">
           <div class = "project-image">
-            <img class="verve-image" src="images/verve-thumbnail.png" width="323" height="323">
+            <img class="verve-image" src="images/verve-thumbnail.png" width="323" height="323" alt="Verve preview">
           </div>
           <div class = "project-details">
             <div>
-              <img class="project-logo" src="images/verve-logo.png">
+              <img class="project-logo" src="images/verve-logo.png" alt="Verve logo">
             </div>
             <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
             <button onclick="window.location.href = 'projectgridversion.html';">READ MORE</button>
@@ -64,7 +64,7 @@
         </div>
           </div>
         <div class = "about-me-details">
-          <p>Hi, I’m Jessica Blanchard, user experience designer and brand strategist. I’m also an urban homesteader, Persian cat and boy mom, true crime sleuth, contemporary art collector and prison reform advocate. I’m passionate about designing solutions for real people, driven by real research and data. I work to make the internet a healthier place, while still <strike>driving</strike> crushing business goals.</p>
+          <p>Hi, I’m Jessica Blanchard, user experience designer and brand strategist. I’m also an urban homesteader, Persian cat and boy mom, true crime sleuth, contemporary art collector and prison reform advocate. I’m passionate about designing solutions for real people, driven by real research and data. I work to make the internet a healthier place for users and a more profitable place for businesses.</p>
           <button>LEARN MORE</button>
         </div>
       </section>
@@ -84,7 +84,7 @@
             <a href="https://www.twitter.com/jesstribble">
               <img src= "images/icons/icons8-twitter-500.png" alt="Twitter logo">
               </a>
-            <a href="mailto:{jessicahtribble@gmail.com}">
+            <a href="mailto:jessicahtribble@gmail.com">
               <img src="images/icons/icons8-email-envelope-500.png" alt="Mail Icon">
               </a>
         </div>
