Correcting minor HTML errors

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
       <header class="navigation">
         <a class = "logo" href="index.html">
-          <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo"width="62" border="0" alt="" style="padding:0px;">
+          <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;">
           </a>
         <a class="navigation-work" href="projectgridversion.html">Work</a>
         <a class="navigation-about" href="about.html">About</a>
@@ -37,7 +37,7 @@
       <section class="about-page-bio">
         <!-- <h1>About Me</h1> -->
 
-        <img class= "about-page-pic" src="images/jb-headshot4.jpg">
+        <img class= "about-page-pic" src="images/jb-headshot4.jpg" alt= "Jessica's headshot">
 
         <div class = "about-page-details">
           <p>Growing up on Long Island in the 90s, we relished the deliciousness of a fresh pizza. You remember the kind - cheesy, oily, the kind that came with the little white pizza table to protect its gooey goodness. When the town was slow to repair a downed street sign at our corner, our pizza deliveries stopped showing up.</p>
@@ -68,8 +68,8 @@
             <a href="https://www.twitter.com/jesstribble">
               <img src= images/icons/icons8-twitter-500.png alt="Twitter logo">
               </a>
-            <a href="mailto:{jessicahtribble@gmail.com}">
-              <img src=images/icons/icons8-email-envelope-500.png>
+            <a href="mailto:jessicahtribble@gmail.com">
+              <img src=images/icons/icons8-email-envelope-500.png alt="Mail icon">
               </a>
         </div>
         <p class="footer-text">designed and developed by Jessica Blanchard</p>
