--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
         <div class = "about-me-details">
           <p>Hi, I’m Jessica Blanchard, user experience designer and brand strategist. I’m also an urban homesteader, Persian cat and boy mom, true crime sleuth, contemporary art collector and prison reform advocate. I’m passionate about designing solutions for real people, driven by real research and data. I work to make the internet a healthier place for users and a more profitable place for businesses.</p>
-          <button>LEARN MORE</button>
+          <button onclick="window.location.href = 'about.html';">LEARN MORE</button>
         </div>
       </section>
 
