testing change to image html

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -367,7 +367,7 @@
         </section>
 
         <section class = "information-architecture-fullwidth4">
-          <img class = "onboard-flow" src="images/User Flow/onboard-new-user.png"</img>
+          <img class = "onboard-flow" src="images/User Flow/onboard-new-user.png"></img>
           </section>
 
         <button class = "all-flows">view all user flows</button>
@@ -380,7 +380,7 @@
           <p>Laying out the pages and content in this early stage revealed many questions about how the product would develop.</p>
         </div>
 
-        <img class = "sitemap-pic" src ="images/Site Map/site-map.png"</img>
+        <img class = "sitemap-pic" src ="images/Site Map/site-map.png"></img>
 
         <div class = "sketches-intro">
             <h3>Sketches, Lo- Fidelity Wireframes & Prototype</h3>
