--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -535,7 +535,7 @@
                 <img src= images/icons/icons8-twitter-500.png alt="Twitter logo">
                 </a>
               <a href="mailto:jessicahtribble@gmail.com">
-                <img src=images/icons/icons8-email-envelope-500.png alt= "Email Icon">>
+                <img src=images/icons/icons8-email-envelope-500.png alt= "Email Icon">
                 </a>
           </div>
           <p class="verve-footer-text">designed and developed by Jessica Blanchard</p>
